# Esg_scorer

./: .gitignore  ChamDiemESG.spec  README.md  UBUNTU_SERVER_DEPLOYMENT.md  VPS_DEPLOYMENT_GUIDE.md  build_exe.py  company_evaluation_text.txt  extract_pdf.js  launcher.py  package-lock.json  package.json  page24_log.txt  pyproject.toml  scoring_principles_text.txt  search_evidence.py
scoring principles/: bổ sung Nguyên tắc tính điểm.md  các tiêu chí chấm điểm.md  cách chat gpt chấm điểm.md  danh sách từ khoá.md
src/esg_scorer/: __init__.py  cli.py  main.py
src/esg_scorer/api/: batch_routes.py  routes.py
src/esg_scorer/core/: framework.py  keywords.py  pdf_extractor.py  scoring_engine.py
src/esg_scorer/models/: database.py  schemas.py
src/esg_scorer/services/: batch_service.py  export_service.py
src/esg_scorer/web/templates/: base.html  batch_status.html  dashboard.html  processing.html  result.html  upload.html
tests/: test_framework.py
