[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esg_scorer"
version = "0.1.0"
description = "ESG Scoring System for Vietnamese Companies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pdfplumber>=0.11.0",
    "typer>=0.12.0",
    "openpyxl>=3.1.2",
    "jinja2>=3.1.3",
    "sqlalchemy>=2.0.29",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "tqdm>=4.66.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.3.5"
]

[project.scripts]
esg-score = "esg_scorer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
